Modified the styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ main{
     justify-content: center;
     align-items: center;
 }
+
 .screen{
     padding: 10px;
     color: var(--numbers-color);
@@ -31,15 +32,16 @@ main{
     border-radius: 10px;
 }
 
-.previous-screen{
-    font-size: 12px;
+.numbers-screen{
+    font-size: 15px;
     margin: 10px 10px 10px 0;
     height: 10px;
 }
 
-.current-screen{
+.result-screen{
     margin-right: 8px;
     height: 10px;
+    color: rgb(255, 255, 255, 0.7);
 }
 
 .calculator{
@@ -47,7 +49,7 @@ main{
     padding-bottom: 30px;
     padding-top: 10px;
     border-radius: 50px;
-    width: 23%;
+    width: 19%;
 }
 
 .display{
@@ -62,6 +64,11 @@ main{
     background-color: var(--special-buttons-bg-colour);
     color: var(--special-buttons-colour);
 }
+
+body{
+    background-color: darkgoldenrod;
+}
+
 
 .special-btn.dot{
     color: var(--numbers-color);
@@ -91,11 +98,14 @@ main{
     background-color: var(--operator-hover-color);
 }
 
-.zero{
+
+.equal{
     flex-grow: 0.85;
     border-radius: 40px;
     text-align: left;
     padding-left: 17px;
+    text-align: center;
+    font-size: 32px;
 }
 
 button{
@@ -118,6 +128,17 @@ button{
 }
 
 footer{
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 10px;
     text-align: center;
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.delete-btn{
+    width: 25%;
+    flex-grow: 1;
+    border-radius: 10px;
+    margin-right: 10px;
+    font-weight: 700;
 }
