--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ main{
 }
 
 .result-screen{
-    margin-right: 8px;
+    margin: 5px 8px 10px 0;
     height: 10px;
     color: rgb(255, 255, 255, 0.7);
 }
@@ -131,12 +131,4 @@ footer{
     text-align: center;
     font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.delete-btn{
-    width: 25%;
-    flex-grow: 1;
-    border-radius: 10px;
-    margin-right: 10px;
-    font-weight: 700;
 }
